# data-charts-api-

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
api/: pyproject.toml
api/app/: server.py
app/: server.py
db/: Makefile  pyproject.toml
db/data_generator/: main.py  prepare_data.py  utils.py
db/data_generator/data/: ad_campaigns.json  mod_regs.json  mod_visits.json  regs.json  visits.json
db/data_generator/fixtures/: agents.json  utm_campaigns.json
scripts/: 002_visits.sql  003_regs.sql  004_ads.sql
tests/: conftest.py  test_server.py
