[project]
name = "data-charts-api"
version = "0.1.0"
description = "api for data charts project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.115.4",
    "flask>=3.0.3",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.2",
]
